// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default database migration and seeding 1`] = `
"🚀  [1mDatabase booster created![22m
👟  [1mMigrations run![22m
🌱  [1mDatabase seeded![22m"
`;

exports[`error thrown when specified knexfile not found 1`] = `"Command failed with exit code 1 (EPERM): ../../index.js -c /tmp"`;

exports[`migration and seeding using specified knexfile 1`] = `
"👟  [1mMigrations run![22m
🌱  [1mDatabase seeded![22m"
`;

exports[`specified database migration and seeding 1`] = `
"🚀  [1mDatabase booster_test created![22m
👟  [1mMigrations run![22m
🌱  [1mDatabase seeded![22m"
`;
